Started work on views with observer/observables

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Zoko</h1>
     <canvas id="zoko" height="400" width="700"></canvas>
   </body>
+  <script src="js/zepto.min.js"></script>
   <script src="js/zoko.js"></script>
   <script>
     window.onload = function() {
