Added sky volume

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>Zoko</title>
     <link href="css/style.css" rel="stylesheet" />
   </head>
-  <body>
+  <body bgcolor="#7f7f7f">
     <h1>Zoko</h1>
-    <canvas id="zoko" height="480" width="640"></canvas>
+    <canvas id="zoko" height="360" width="480"></canvas>
   </body>
   <script src="js/zepto.min.js"></script>
   <script src="js/zoko.js"></script>
