--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <title>Zoko</title>
     <link href="css/style.css" rel="stylesheet" />
   </head>
-  <body bgcolor="#7f7f7f">
-    <h1>Zoko</h1>
-    <canvas id="zoko" height="360" width="480"></canvas>
+  <body>
+    <div class="container">
+      <h1>ZOKO</h1>
+      <canvas id="zoko" height="400" width="780"></canvas>
+    </div>
   </body>
   <script src="js/zepto.min.js"></script>
   <script src="js/zoko.js"></script>
