--- a/index.html
+++ b/index.html
@@ -15,26 +15,7 @@
   <script>
     window.onload = function() {
       canvas = document.getElementById('zoko');
-      e3d.init(canvas);
-
-      loadJsonFile('lev/04.json', function (level) {
-        levelView = new LevelView();
-        levelState = new LevelState(level);
-        levelState.observers = [levelView];
-        levelState.notifyObservers();
-        new KeyboardController(levelState, levelView.camera);
-        new MouseController(canvas, levelView.camera);
-      });
-
-      e3d.onrender = function () {
-        if ( e3d.scene !== null ) {
-          camera = e3d.scene.camera;
-          // camera.rotation = vec.add(camera.rotation, [0.0, 0.0, 0.007]);
-        }
-      };
-
-
-      e3d.run();
+      new Zoko(canvas);
     }
   </script>
 </html>
