Gameflow is getting ready

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script>
     window.onload = function() {
       canvas = document.getElementById('zoko');
-      new Zoko(canvas);
+      zoko = new Zoko(canvas);
     }
   </script>
 </html>
