Started implementing UI

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <script src="js/zoko.js"></script>
   <script>
     window.onload = function() {
-      canvas = document.getElementById('zoko');
-      zoko = new Zoko(canvas);
+      container = $('div.container')
+      zoko = new Zoko(container);
     }
   </script>
 </html>
