Added next level button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div class="container">
       <h1>ZOKO</h1>
       <canvas id="zoko" height="400" width="780"></canvas>
+      <button id="next">Next level</button>
     </div>
   </body>
   <script src="js/zepto.min.js"></script>
