--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <div class="container">
       <h1>ZOKO</h1>
       <canvas id="zoko" height="400" width="780"></canvas>
-      <button id="next">Next level</button>
+      <div class="btn-group">
+        <button id="nextBtn" class="btn">Next Level</button>
+        <button id="restartBtn" class="btn">Restart Level</button>
+        <button id="newBtn" class="btn">New Game</button>
+      </div>
+      <p id="steps">0 steps</p>
     </div>
   </body>
   <script src="js/zepto.min.js"></script>
