--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         </div>
       </div>
     </div>
+
+    <footer>
+      <p class="footer">
+        A game entry for <a href="https://github.com/blog/1303-github-game-off">GitHub Game Off 2012</a> by <a href="mailto:samuel02@gmail.com">Samuel Nilsson</a> and <a href="mailto:zyxster@gmail.com">Sebastian Viklund</a>.
+      </p>
+    </footer>
   </body>
   <script src="js/zepto.min.js"></script>
   <script src="js/zoko.js"></script>
