Continuing developing menu

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
         <div id="menu" style="display:none">
           <div class="options">
-            <h2>Good job!</h2>
+            <h2 class="title">Options</h2>
+            <button id="continueBtn" class="btn">Continue Game</button>
             <button id="nextBtn" class="btn">Next Level &rarr;</button>
             <button id="previousBtn" class="btn">&larr; Previous Level</button>
           </div>
@@ -51,6 +52,7 @@
         <div id="menuOverlay" style="display:none"></div>
 
         <div class="btn-group">
+          <button id="menuBtn" class="icon-btn icon-home"></button>
           <button id="restartBtn" class="icon-btn icon-undo"></button>
         </div>
       </div>
