--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
   <script src="js/jquery-1.8.3.min.js"></script>
   <script src="js/zoko.js"></script>
   <script>
-    window.onload = function() {
-      container = $('div.container')
-      zoko = new Zoko(container);
-    }
+    $(function() {
+      $(document).ready(function() {
+        container = $('div.container');
+        zoko = new Zoko(container);
+      });
+    });
   </script>
 </html>
