Improved restart and menu buttons

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <div id="menuOverlay" style="display:none"></div>
 
         <div class="btn-group">
-          <button id="menuBtn" class="icon-btn icon-home"></button>
-          <button id="restartBtn" class="icon-btn icon-undo"></button>
+          <a id="menuBtn" class="icon-btn icon-home" title="Show Menu"></a>
+          <a id="restartBtn" class="icon-btn icon-undo" title="Restart Level"></a>
         </div>
       </div>
     </div>
