Added some styling, a logo and a font

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <title>Zoko</title>
+    <script type="text/javascript" src="//use.typekit.net/apk7kwq.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <link href="css/font-awesome.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
   </head>
-  <body>
+  <body class="tk-nimbus-sans">
     <div class="container">
       <div id="wrapper">
         <canvas id="zoko" height="450" width="850"></canvas>
@@ -50,8 +52,8 @@
           </div>
         </div>
         <div id="menuOverlay" style="display:none"></div>
-
-        <div class="btn-group">
+        <h1 id="logo">zoko</h1>
+        <div id="btn-group">
           <a id="menuBtn" class="icon-btn icon-home" title="Show Menu"></a>
           <a id="restartBtn" class="icon-btn icon-undo" title="Restart Level"></a>
         </div>
