--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body class="tk-nimbus-sans">
+    <a href="https://github.com/lulea/game-off-2012/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
     <div class="container">
       <div id="wrapper">
         <canvas id="zoko" height="450" width="850"></canvas>
