Added level info to display

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
         <div id="overlay">
           <p id="steps">0 steps</p>
+          <p id="level">Level <span class="levelNumber">1</span></p>
         </div>
 
         <div id="menu" style="display:none">
