Fixed minor bugs

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <p id="level">Level <span class="levelNumber">1</span></p>
         </div>
 
-        <div id="menu" style="display:none">
+        <div id="menu">
           <div class="options">
             <h2 class="title">Options</h2>
             <button id="continueBtn" class="btn">Continue Game</button>
@@ -53,7 +53,7 @@
             </table>
           </div>
         </div>
-        <div id="menuOverlay" style="display:none"></div>
+        <div id="menuOverlay"></div>
         <h1 id="logo">zoko</h1>
         <div id="btn-group">
           <a id="menuBtn" class="icon-btn icon-home" title="Show Menu"></a>
