Commented out instructions

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
 
     <footer>
-      <div class="instructions">
+      <!--<div class="instructions">
         <div class="playerKeys">
           <ol class="arrow-keys">
             <li>
@@ -93,7 +93,7 @@
           <a href="#" class="key c82"><span>r</span></a>
           <p>Restart level</p>
         </div>
-      </div>
+      </div>-->
 
       <p class="footer">
         A game entry for <a href="https://github.com/blog/1303-github-game-off">GitHub Game Off 2012</a> by <a href="mailto:samuel02@gmail.com">Samuel Nilsson</a> and <a href="mailto:zyxster@gmail.com">Sebastian Viklund</a>.
