Updated to newest version

--- a/index.html
+++ b/index.html
@@ -65,6 +65,35 @@
     </div>
 
     <footer>
+      <!--<div class="instructions">
+        <div class="playerKeys">
+          <ol class="arrow-keys">
+            <li>
+              <a href="#" class="key" id="left">
+                <span>&#8592;</span>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="key" id="up">
+                <span>&#8593;</span>
+              </a>
+              <a href="#" class="key" id="down">
+                <span>&#8595;</span>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="key" id="right">
+                <span>&#8594;</span>
+              </a>
+            </li>
+          </ol>
+          <p>Control the player</p>
+        </div>
+        <div class="restartLevelKey">
+          <a href="#" class="key c82"><span>r</span></a>
+          <p>Restart level</p>
+        </div>
+      </div>-->
 
       <p class="footer">
         A game entry for <a href="https://github.com/blog/1303-github-game-off">GitHub Game Off 2012</a> by <a href="mailto:samuel02@gmail.com">Samuel Nilsson</a> and <a href="mailto:zyxster@gmail.com">Sebastian Viklund</a>.
@@ -80,18 +109,5 @@
         zoko = new Zoko(container);
       });
     });
-  </script>
-  <script type="text/javascript">
-
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-36696854-1']);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-
   </script>
 </html>
