--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <div class="content">
           <canvas id="zoko" height="450" width="850"></canvas>
 
-          <div id="overlay">
+          <div id="statsOverlay" class="overlay">
             <p id="steps">0 steps</p>
             <p id="level">Level <span class="levelNumber">1</span></p>
           </div>
 
-          <div id="menu">
+          <div id="menuDialog" class="dialog">
             <div class="options">
               <h2 class="title">Options</h2>
               <button id="continueBtn" class="btn">Continue Game</button>
@@ -54,47 +54,74 @@
               </table>
             </div>
           </div>
-          <div id="menuOverlay"></div>
+
+          <div id="helpDialog" class="dialog">
+            <h2>Instructions</h2>
+            <div class="instructions">
+              <div class="playerKeys">
+                <ol class="arrow-keys">
+                  <li>
+                    <a href="#" class="key" id="left">
+                      <span>&#8592;</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="key" id="up">
+                      <span>&#8593;</span>
+                    </a>
+                    <a href="#" class="key" id="down">
+                      <span>&#8595;</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="key" id="right">
+                      <span>&#8594;</span>
+                    </a>
+                  </li>
+                </ol>
+                <p>Control the player</p>
+              </div>
+              <div class="playerKeys">
+                <ol class="arrow-keys">
+                  <li>
+                    <a href="#" class="key" id="left">
+                      <span>a</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="key" id="up">
+                      <span>w</span>
+                    </a>
+                    <a href="#" class="key" id="down">
+                      <span>s</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="key" id="right">
+                      <span>d</span>
+                    </a>
+                  </li>
+                </ol>
+                <p>Control the player</p>
+              </div>
+              <div class="restartLevelKey">
+                <a href="#" class="key c82"><span>r</span></a>
+                <p>Restart level</p>
+              </div>
+            </div>
+          </div>
+          <div id="dialogOverlay" class="overlay"></div>
           <h1 id="logo">zoko</h1>
           <div id="btn-group">
             <a id="menuBtn" class="icon-btn icon-home" title="Show Menu"></a>
             <a id="restartBtn" class="icon-btn icon-undo" title="Restart Level"></a>
+            <a id="helpBtn" class="icon-btn icon-question-sign" title="Help"></a>
           </div>
         </div>
       </div>
     </div>
 
     <footer>
-      <!--<div class="instructions">
-        <div class="playerKeys">
-          <ol class="arrow-keys">
-            <li>
-              <a href="#" class="key" id="left">
-                <span>&#8592;</span>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="key" id="up">
-                <span>&#8593;</span>
-              </a>
-              <a href="#" class="key" id="down">
-                <span>&#8595;</span>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="key" id="right">
-                <span>&#8594;</span>
-              </a>
-            </li>
-          </ol>
-          <p>Control the player</p>
-        </div>
-        <div class="restartLevelKey">
-          <a href="#" class="key c82"><span>r</span></a>
-          <p>Restart level</p>
-        </div>
-      </div>-->
-
       <p class="footer">
         A game entry for <a href="https://github.com/blog/1303-github-game-off">GitHub Game Off 2012</a> by <a href="mailto:samuel02@gmail.com">Samuel Nilsson</a> and <a href="mailto:zyxster@gmail.com">Sebastian Viklund</a>.
       </p>
